--- a/projects/phares/citoyens.html
+++ b/projects/phares/citoyens.html
@@ -202,24 +202,31 @@
 <section class="terminal-section article-section" id="mes-services">
   <h2>Mes services pour les citoyens</h2>
   <p>
-  <b>Formation de sensibilisation aux dangers en ligne. Accompagnement personnalisé </b><br> 
-    Ce service s’adresse aux citoyens qui n’ont pas de connaissance préalable en informatique mais souhaitent prendre en main leur sécurité numérique. <br>
-Par le biais d’ateliers en petits groupe ou de rencontres individuelles, en présentiel ou en appel vidéo, nous passerons en revue les points essentiels à considérer pour améliorer immédiatement votre sécurité en ligne, tout en vous aidant  à développer une culture de cybersécurité pratique.<br>
+  <b>Formation de sensibilisation aux dangers en ligne. Accompagnement personnalisé </b><br><br>
+
     <figure class="article-image" id="formation-citoyens"
             style="text-align:center; margin:20px 0;">
       <img src="img/formation-citoyens.png"
            class="img-reduite"
            style="max-width:100%; border-radius:10px; border:1px solid #3fb95033;">
     </figure>  
+    
+    Ce service s’adresse aux citoyens qui n’ont pas de connaissance préalable en informatique mais souhaitent prendre en main leur sécurité numérique. <br><br>
+    Par le biais d’ateliers en petits groupe ou de rencontres individuelles, en présentiel ou en appel vidéo, nous passerons en revue les points essentiels à considérer pour améliorer immédiatement votre sécurité en ligne, tout en vous aidant  à développer une culture de cybersécurité pratique.<br>
 
   </p>
 
   <p>
-    <i>« Suis-je 100 % protégé si j’installe un antivirus ? qu’est-ce qu’un passkey? Les messages passionnés que m’envoie ma star de cinéma préférée sur ma messagerie privée sont-ils trop beaux pour être vrais? »</i><br><br>
 
+  <div class="callout-retain">
+    <strong>Suis-je 100 % protégé si j’installe un antivirus ? qu’est-ce qu’un passkey? Les messages passionnés que m’envoie ma star de cinéma préférée sur ma messagerie privée sont-ils trop beaux pour être vrais?</strong><br><br>
+ 
     • Nous aborderons toutes les questions qui vous préoccupent. Aucune n’est stupide. <br>
-    • Les poser représente une partie du chemin vers la solution recherchée.<br>
-    • L’objectif est de vous aider à développer une <b><u>saine vigilance</u></b> et d’améliorer aussi vite que possible vos défenses contre  les acteurs malveillants.</p>
+    • Les poser représente une partie du chemin vers la solution recherchée.<br><br>
+    L’objectif est de vous aider à développer une <b><u>saine vigilance</u></b> et d’améliorer aussi vite que possible vos défenses contre  les acteurs malveillants.
+  </div>
+
+
 </section> 
 <section class="terminal-section article-section" id="securisation">
   <h2>Vérification et sécurisation de votre environnement numérique</h2>
@@ -236,7 +243,7 @@ Par le biais d’ateliers en petits groupe ou de rencontres individuelles, en pr
     • Sécuriser votre réseau local,<br> 
     • Sécuriser vos comptes courriel, <br>
     • Implémenter l’authentification multi-facteurs pour vos comptes en ligne critiques,<br>
-    • Choisir et implémenter des stratégies de sauvegarde de vos fichiers sensibles,<br> 
+    • Choisir et implémenter des stratégies de sauvegarde de vos fichiers sensibles.<br><br>
 N’hésitez pas à me soumettre vos situations spécifiques, que nous étudierons  ensemble au cas par cas en vue de trouver la meilleure solution.   
   </p>
 </section>
@@ -251,10 +258,10 @@ N’hésitez pas à me soumettre vos situations spécifiques, que nous étudiero
 <section class="terminal-section article-section" id="bienveillance">
   <h2>Une approche humaine, bienveillante et confidentielle</h2>
   <p>
-    • N’importe qui peut être victime d’une fraude. Elle ne doit en aucun cas être un sujet de honte dont vous n’osez parler. La honte n’a pas à être portée par la victime, elle n’appartient qu’à l’escroc qui a choisi le vol pour mode de vie. <br>
-    • Soyez certain que votre situation sera abordée sans jugement, et qu’aucune question n’apparaîtra stupide. Je suis à vos côtés pour vous accompagner, pas pour vous juger. <br>
-    • La confidentialité de votre situation est garantie. Ce qui se dit entre nous reste entre nous, sauf ce que vous décidez de dévoiler vous-même auprès de votre entourage. La confidentialité est un pilier fondateur des métiers de la cybersécurité, elle s’applique bien entendu à notre collaboration. <br>
-    • Mon discours est adapté au niveau de chacun et la pédagogie au cœur de ma démarche: aucune connaissance préalable n’est requise. Notre intérêt commun est de vous permettre de progresser dans votre compréhension du monde numérique qui nous submerge. Je m’engage à vous aider dans cette démarche avec des mots simples et à franchir les paliers un à un, un pas à la fois. <br> 
+    • N’importe qui peut être victime d’une fraude. Elle ne doit en aucun cas être un sujet de honte dont vous n’osez parler. La honte n’a pas à être portée par la victime, elle n’appartient qu’à l’escroc qui a choisi le vol pour mode de vie. <br><br>
+    • Soyez certain que votre situation sera abordée sans jugement, et qu’aucune question n’apparaîtra stupide. Je suis à vos côtés pour vous accompagner, pas pour vous juger. <br><br>
+    • La confidentialité de votre situation est garantie. Ce qui se dit entre nous reste entre nous, sauf ce que vous décidez de dévoiler vous-même auprès de votre entourage. La confidentialité est un pilier fondateur des métiers de la cybersécurité, elle s’applique bien entendu à notre collaboration. <br><br>
+    • Mon discours est adapté au niveau de chacun et la pédagogie au cœur de ma démarche: aucune connaissance préalable n’est requise. Notre intérêt commun est de vous permettre de progresser dans votre compréhension du monde numérique qui nous submerge. Je m’engage à vous aider dans cette démarche avec des mots simples et à franchir les paliers un à un, un pas à la fois. <br> <br>
   
   </p>
 </section> 
@@ -262,7 +269,7 @@ N’hésitez pas à me soumettre vos situations spécifiques, que nous étudiero
 <section class="terminal-section article-section" id="qui">
   <h2>À qui s’adressent mes services ?</h2>
   <p>
-      Mes services s’adressent notamment aux: <br>
+      Mes services s’adressent notamment aux: <br><br>
     • aînés, souvent ciblés par des escroqueries téléphoniques ou bancaires,<br>
     • familles, soucieuses de protéger leurs proches,<br>
     • citoyens non techniques, qui veulent comprendre et renforcer leur sécurité sans nécessairement devenir experts,<br>
@@ -273,7 +280,7 @@ N’hésitez pas à me soumettre vos situations spécifiques, que nous étudiero
 </section> 
     
     <!-- ===== CONCLUSION / CONTACT ===== -->
-    <section class="terminal-section" id="contact">
+    <section class="terminal-section article-section" id="conclusion">
       <h2>Vous souhaitez être accompagné ?&nbsp;?</h2>
       <p>
         Si vous avez une crainte sur votre sécurité numérique, ou simplement l’envie de prendre en main votre protection, je vous invite à prendre contact avec moi. <br>
