--- a/projects/phares/citoyens.html
+++ b/projects/phares/citoyens.html
@@ -202,7 +202,7 @@
 <section class="terminal-section article-section" id="mes-services">
   <h2>Mes services pour les citoyens</h2>
   <p>
-  <b>Formation de sensibilisation aux dangers en ligne. Accompagnement personnalisé </b><br><br>
+  <h3>Formation de sensibilisation aux dangers en ligne. Accompagnement personnalisé </h3><br><br>
 
     <figure class="article-image" id="formation-citoyens"
             style="text-align:center; margin:20px 0;">
@@ -216,7 +216,7 @@
 
   </p>
 
-  <p>
+
 
   <div class="callout-retain">
     <strong>Suis-je 100 % protégé si j’installe un antivirus ? qu’est-ce qu’un passkey? Les messages passionnés que m’envoie ma star de cinéma préférée sur ma messagerie privée sont-ils trop beaux pour être vrais?</strong><br><br>
@@ -225,11 +225,10 @@
     • Les poser représente une partie du chemin vers la solution recherchée.<br><br>
     L’objectif est de vous aider à développer une <b><u>saine vigilance</u></b> et d’améliorer aussi vite que possible vos défenses contre  les acteurs malveillants.
   </div>
-
-
-</section> 
-<section class="terminal-section article-section" id="securisation">
-  <h2>Vérification et sécurisation de votre environnement numérique</h2>
+  
+  <hr class="section-divider">
+  
+<h3>Vérification et sécurisation de votre environnement numérique</h3>
   <p>
 
 <figure class="article-image" id="securisation"
@@ -246,10 +245,10 @@
     • Choisir et implémenter des stratégies de sauvegarde de vos fichiers sensibles.<br><br>
 N’hésitez pas à me soumettre vos situations spécifiques, que nous étudierons  ensemble au cas par cas en vue de trouver la meilleure solution.   
   </p>
-</section>
 
-<section class="terminal-section article-section" id="soutien">
-  <h2>Soutien pendant ou après une fraude ou une tentative de fraude</h2>
+  <hr class="section-divider">
+  
+  <h3>Soutien pendant ou après une fraude ou une tentative de fraude</h3>
 <figure class="article-image" id="alerte"
             style="text-align:center; margin:20px 0;">
       <img src="img/alerte-scam.png"
@@ -260,7 +259,10 @@ N’hésitez pas à me soumettre vos situations spécifiques, que nous étudiero
   <p>
     Qu’il s’agisse de reconnaître les signaux précurseurs à une attaque,  de vous accompagner pendant un incident ou de réaliser des suivis post-mortem, je peux vous aider à prendre en charge les incidents que vous pourriez être amenés à subir, et mettre en place toutes mesures correctives pour réduire les risques qu’ils se reproduisent. 
   </p>
-</section>
+</section> 
+
+
+
 
 <section class="terminal-section article-section" id="qui">
   <h2>À qui s’adressent mes services ?</h2>
