--- a/projects/phares/citoyens.html
+++ b/projects/phares/citoyens.html
@@ -247,8 +247,10 @@ N’hésitez pas à me soumettre vos situations spécifiques, que nous étudiero
   </p>
 
   <hr class="section-divider">
-  
+  <p style="text-align:center;">
   <h3>Soutien pendant ou après une fraude ou une tentative de fraude</h3>
+  </p> 
+  <p>
 <figure class="article-image" id="alerte"
             style="text-align:center; margin:20px 0;">
       <img src="img/alerte-scam.png"
@@ -256,7 +258,6 @@ N’hésitez pas à me soumettre vos situations spécifiques, que nous étudiero
            style="max-width:100%; border-radius:10px; border:1px solid #3fb95033;">
     </figure> 
   
-  <p>
     Qu’il s’agisse de reconnaître les signaux précurseurs à une attaque,  de vous accompagner pendant un incident ou de réaliser des suivis post-mortem, je peux vous aider à prendre en charge les incidents que vous pourriez être amenés à subir, et mettre en place toutes mesures correctives pour réduire les risques qu’ils se reproduisent. 
   </p>
 </section> 
