--- a/projects/phares/citoyens.html
+++ b/projects/phares/citoyens.html
@@ -201,10 +201,10 @@
 
 <section class="terminal-section article-section" id="mes-services">
   <h2>Mes services pour les citoyens</h2>
+  
+  <h3 class="titre-centre">Formation de sensibilisation aux dangers en ligne. Accompagnement personnalisé </h3><br><br>
   <p>
-  <h3>Formation de sensibilisation aux dangers en ligne. Accompagnement personnalisé </h3><br><br>
-
-    <figure class="article-image" id="formation-citoyens"
+      <figure class="article-image" id="formation-citoyens"
             style="text-align:center; margin:20px 0;">
       <img src="img/formation-citoyens.png"
            class="img-reduite"
@@ -228,7 +228,10 @@
   
   <hr class="section-divider">
   
-<h3>Vérification et sécurisation de votre environnement numérique</h3>
+  <h3 class="titre-centre">
+    Formation de sensibilisation aux dangers en ligne. Accompagnement personnalisé.
+  </h3>
+  
   <p>
 
 <figure class="article-image" id="securisation"
@@ -247,11 +250,11 @@ N’hésitez pas à me soumettre vos situations spécifiques, que nous étudiero
   </p>
 
   <hr class="section-divider">
-  <p style="text-align:center;">
-  <h3>Soutien pendant ou après une fraude ou une tentative de fraude</h3>
-  </p> 
+  <h3 class="titre-centre">
+   Soutien pendant ou après une fraude ou une tentative de fraude</h3>
+ 
   <p>
-<figure class="article-image" id="alerte"
+    <figure class="article-image" id="alerte"
             style="text-align:center; margin:20px 0;">
       <img src="img/alerte-scam.png"
            class="img-reduite"
