--- a/projects/phares/citoyens.html
+++ b/projects/phares/citoyens.html
@@ -202,7 +202,9 @@
 <section class="terminal-section article-section" id="mes-services">
   <h2>Mes services pour les citoyens</h2>
   
-  <h3 class="titre-centre">Formation de sensibilisation aux dangers en ligne. Accompagnement personnalisé </h3><br><br>
+  <h3 class="titre-centre">
+    <u>Formation de sensibilisation aux dangers en ligne. Accompagnement personnalisé</u>. 
+  </h3>
   <p>
       <figure class="article-image" id="formation-citoyens"
             style="text-align:center; margin:20px 0;">
@@ -229,7 +231,7 @@
   <hr class="section-divider">
   
   <h3 class="titre-centre">
-    Formation de sensibilisation aux dangers en ligne. Accompagnement personnalisé.
+    <u>Vérification et sécurisation de votre environnement numérique.</u>
   </h3>
   
   <p>
@@ -251,7 +253,7 @@ N’hésitez pas à me soumettre vos situations spécifiques, que nous étudiero
 
   <hr class="section-divider">
   <h3 class="titre-centre">
-   Soutien pendant ou après une fraude ou une tentative de fraude</h3>
+   <u>Soutien pendant ou après une fraude ou une tentative de fraude</u></h3>
  
   <p>
     <figure class="article-image" id="alerte"
