--- a/projects/phares/citoyens.html
+++ b/projects/phares/citoyens.html
@@ -203,7 +203,7 @@
   <h2>Mes services pour les citoyens</h2>
   
   <h3 class="titre-centre">
-    <u>Formation de sensibilisation aux dangers en ligne. Accompagnement personnalisé</u>. 
+    <u>Service #1</u>:<u> Formation de sensibilisation aux dangers en ligne. Accompagnement personnalisé</u>. 
   </h3>
   <p>
       <figure class="article-image" id="formation-citoyens"
@@ -231,7 +231,7 @@
   <hr class="section-divider">
   
   <h3 class="titre-centre">
-    <u>Vérification et sécurisation de votre environnement numérique.</u>
+    <u>Service #2</u>:<u> Vérification et sécurisation de votre environnement numérique.</u>
   </h3>
   
   <p>
@@ -253,7 +253,7 @@ N’hésitez pas à me soumettre vos situations spécifiques, que nous étudiero
 
   <hr class="section-divider">
   <h3 class="titre-centre">
-   <u>Soutien pendant ou après une fraude ou une tentative de fraude</u></h3>
+   <u>Service #3</u>:<u> Soutien pendant ou après une fraude ou une tentative de fraude</u></h3>
  
   <p>
     <figure class="article-image" id="alerte"
