--- a/projects/phares/citoyens.html
+++ b/projects/phares/citoyens.html
@@ -273,11 +273,11 @@ N’hésitez pas à me soumettre vos situations spécifiques, que nous étudiero
 <section class="terminal-section article-section" id="qui">
   <h2>À qui s’adressent mes services ?</h2>
   <p>
-      Mes services s’adressent notamment aux: <br><br>
-    • aînés, souvent ciblés par des escroqueries téléphoniques ou bancaires,<br>
-    • familles, soucieuses de protéger leurs proches,<br>
-    • citoyens non techniques, qui veulent comprendre et renforcer leur sécurité sans nécessairement devenir experts,<br>
-    • proches aidants, qui accompagnent un parent ou un proche vulnérable.<br>
+      Ils s’adressent notamment aux: <br><br>
+    • <b>aînés</b>, souvent ciblés par des escroqueries téléphoniques ou bancaires,<br>
+    • <b>familles</b>, soucieuses de protéger leurs proches,<br>
+    • <b>citoyens non techniques</b>, qui souhaitent comprendre et renforcer leur sécurité sans nécessairement devenir experts,<br>
+    • <b>proches aidants</b>, qui accompagnent un parent ou un proche vulnérable.<br>
       
 
   </p>
@@ -286,10 +286,10 @@ N’hésitez pas à me soumettre vos situations spécifiques, que nous étudiero
 <section class="terminal-section article-section" id="bienveillance">
   <h2>Une approche humaine, bienveillante et confidentielle</h2>
   <p>
-    • N’importe qui peut être victime d’une fraude. Elle ne doit en aucun cas être un sujet de honte dont vous n’osez parler. La honte n’a pas à être portée par la victime, elle n’appartient qu’à l’escroc qui a choisi le vol pour mode de vie. <br><br>
-    • Soyez certain que votre situation sera abordée sans jugement, et qu’aucune question n’apparaîtra stupide. Je suis à vos côtés pour vous accompagner, pas pour vous juger. <br><br>
-    • La confidentialité de votre situation est garantie. Ce qui se dit entre nous reste entre nous, sauf ce que vous décidez de dévoiler vous-même auprès de votre entourage. La confidentialité est un pilier fondateur des métiers de la cybersécurité, elle s’applique bien entendu à notre collaboration. <br><br>
-    • Mon discours est adapté au niveau de chacun et la pédagogie au cœur de ma démarche: aucune connaissance préalable n’est requise. Notre intérêt commun est de vous permettre de progresser dans votre compréhension du monde numérique qui nous submerge. Je m’engage à vous aider dans cette démarche avec des mots simples et à franchir les paliers un à un, un pas à la fois. <br> <br>
+    • <b>N’importe qui peut être victime d’une fraude</b>. Elle ne doit en aucun cas être un sujet de honte dont vous n’osez parler. La honte n’a pas à être portée par la victime, elle n’appartient qu’à l’escroc qui a choisi le vol pour mode de vie. <br><br>
+    • Soyez certain que votre situation sera abordée <b>sans jugement</b>, et qu’aucune question n’est stupide. Je suis à vos côtés pour vous accompagner, pas pour vous juger. <br><br>
+    • La <b>confidentialité</b> de votre situation est garantie. Ce qui se dit entre nous reste entre nous, sauf ce que vous décidez de dévoiler vous-même auprès de votre entourage. La confidentialité est un pilier fondateur des métiers de la cybersécurité, elle s’applique bien entendu à notre collaboration. <br><br>
+    • Mon discours est adapté au niveau de chacun et la <b>pédagogie</b> au cœur de ma démarche: aucune connaissance préalable n’est requise. Notre intérêt commun est de vous permettre de progresser dans votre compréhension du monde numérique qui nous submerge. Je m’engage à vous aider dans cette démarche avec des mots simples et à franchir les paliers un à un, un pas à la fois. <br> <br>
   
   </p>
 </section> 
