--- a/projects/phares/citoyens.html
+++ b/projects/phares/citoyens.html
@@ -300,7 +300,7 @@ N’hésitez pas à me soumettre vos situations spécifiques, que nous étudiero
     <section class="terminal-section article-section" id="conclusion">
       <h2>Vous souhaitez être accompagné&nbsp;?</h2>
       <p>
-        Si vous avez une crainte sur votre sécurité numérique, ou simplement l’envie de prendre en main votre protection, je vous invite à prendre contact avec moi. <br>
+        Si vous avez une crainte sur votre sécurité numérique, ou simplement l’envie de prendre en main votre protection, je vous invite à prendre contact avec moi. 
         Ensemble, nous ferons en sorte que votre environnement technologique ne soit plus une source d’inquiétudes. <br>
       </p>
 
