--- a/projects/phares/citoyens.html
+++ b/projects/phares/citoyens.html
@@ -221,7 +221,7 @@
 
 
   <div class="callout-retain">
-    <strong>Suis-je 100 % protégé si j’installe un antivirus ? qu’est-ce qu’un passkey? Les messages passionnés que m’envoie ma star de cinéma préférée sur ma messagerie privée sont-ils trop beaux pour être vrais?</strong><br><br>
+    <i>"Suis-je 100 % protégé si j’installe un antivirus ? qu’est-ce qu’un passkey? Les messages passionnés que m’envoie ma star de cinéma préférée sur ma messagerie privée sont-ils trop beaux pour être vrais?"</i><br><br>
  
     • Nous aborderons toutes les questions qui vous préoccupent. Aucune n’est stupide. <br>
     • Les poser représente une partie du chemin vers la solution recherchée.<br><br>
@@ -287,7 +287,7 @@ N’hésitez pas à me soumettre vos situations spécifiques, que nous étudiero
   <h2>Une approche humaine, bienveillante et confidentielle</h2>
   <p>
     • N’importe qui peut être victime d’une fraude, y compris les professionnels en cybersécurité les plus aguerris. <b><u>Elle ne doit en aucun cas être un sujet de honte dont vous n’osez parler</u></b>. La honte n’a pas à être portée par la victime, elle n’appartient qu’à l’escroc qui a choisi le vol pour mode de vie. <br><br>
-    • Soyez certain que votre situation sera abordée <b><u>sans jugement</u></b>, et qu’aucune question n’est stupide. Je suis à vos côtés pour vous accompagner, pas pour vous juger. <br><br>
+    • Soyez certain que votre situation sera abordée <b><u>sans jugement</u></b>. Je suis à vos côtés pour vous accompagner, pas pour vous juger. <br><br>
     • La <b><u>confidentialité</u></b> de votre situation est garantie. Ce qui se dit entre nous reste entre nous, sauf ce que vous décidez de dévoiler vous-même auprès de votre entourage. La confidentialité est un pilier fondateur des métiers de la cybersécurité, elle s’applique bien entendu à notre collaboration. <br><br>
     • Mon discours est adapté au niveau de chacun et la <b><u>pédagogie</u></b> au cœur de ma démarche: aucune connaissance préalable n’est requise. Notre intérêt commun est de vous permettre de progresser dans votre compréhension du monde numérique qui nous submerge. Je m’engage à vous aider dans cette démarche avec des mots simples et à franchir les paliers un à un, un pas à la fois. <br> <br>
   
