--- a/projects/phares/protection-pme.html
+++ b/projects/phares/protection-pme.html
@@ -8,7 +8,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Projet phare #1 : Développement de programmes de cybersécurité pour les PME</title>
+  <title>Développement de programmes de cybersécurité pour les PME</title>
 
   <!-- Feuille de style globale du site -->
   <link rel="stylesheet" href="../../assets/css/style.css">
