--- a/projects/phares/citoyens.html
+++ b/projects/phares/citoyens.html
@@ -23,7 +23,7 @@
 
     <div style="font-size:3.5em; color:#3fb950; margin-bottom:10px;">🔒</div>
     <h1 style="font-size:2rem; margin-bottom:10px; color:#3fb950;">
-      Projet phare #2 : Protection des citoyens face aux menaces en ligne
+      Protection des citoyens face aux menaces en ligne
     </h1>
     <p style="text-align:center; font-size:1.2em; max-width:800px; margin:0 auto; color:#d1d5db; line-height:1.6;">
       Sensibiliser les citoyens aux techniques utilisées par les escrocs et renforcer leurs moyens de défense.
