--- a/projects/phares/protection-pme.html
+++ b/projects/phares/protection-pme.html
@@ -54,7 +54,7 @@
 
     <div style="font-size:3.5em; color:#3fb950; margin-bottom:10px;">🔒</div>
     <h1 style="font-size:2rem; margin-bottom:10px; color:#3fb950;">
-      Projet phare #1 : Développement de programmes de cybersécurité pour les PME
+      Développement de programmes de cybersécurité pour les PME
     </h1>
     <p style="font-size:1.2em; max-width:800px; margin:0 auto; color:#d1d5db; line-height:1.6;">
       Comment aider les petites et moyennes entreprises à bâtir un programme de cybersécurité réaliste,
