--- a/projects/phares/citoyens.html
+++ b/projects/phares/citoyens.html
@@ -92,11 +92,9 @@
     <div class="profil-texte">
       <p>
         <strong>Réjean, 58&nbsp;ans, commis dans un magasin de bricolage.</strong><br><br>
-        Il utilise l’informatique à la maison pour le divertissement (jeux en ligne), accéder à ses comptes bancaires et faire des achats en ligne. 
-        Il se sent souvent perdu face aux problèmes informatiques qu’il rencontre au quotidien, essaie de suivre quelques recommandations trouvées sur internet,
-        mais les trouve compliquées et difficiles à mettre en oeuvre. 
-        Il aurait besoin de conseils prodigués de vive voix, plutôt que de lire de longs articles qu’il peine souvent à comprendre. 
-      </p>
+        Il utilise un ordinateur à la maison pour le divertissement (jeux en ligne), accéder à ses comptes bancaires et faire des achats en ligne. 
+        Il se sent souvent perdu face aux problèmes informatiques qu’il rencontre au quotidien, mais s’inquiète de ces innombrables escroqueries en ligne dont il entend parler dans les nouvelles. Bien qu'il essaie de suivre quelques recommandations trouvées sur internet,
+        il les trouve compliquées et difficiles à mettre en œuvre, d’autant plus que son intérêt pour l'informatique est très limité. Il préférerait bénéficier de conseils de vive voix et d'un accompagnement personnalisé pour l'aider à renforcer sa sécurité en ligne.       </p>
     </div>
   </div>
 
